# risk-parity-portfolio

./: Cargo.toml  README.md  tickers.yaml
src/: main.rs  test.rs
